Change Java version to 17 for CI